parsing/aspParser.output
   0  $accept : %entry% $end

   1  page : statement_list

   2  statement_list : terminated_statement statement_list
   3                 | EOF
   4                 |

   5  compound_block : separator statement_list

   6  terminated_statement : statement EOF
   7                       | statement separator
   8                       | separator

   9  at_least_one_separator : separator at_least_one_separator
  10                         | separator

  11  separator : INLINE_VALUE rvalue
  12            | HTML
  13            | SSI
  14            | COMMENT
  15            | EOL
  16            | COLON

  17  statement : statement_body

  18  statement_body : CALL identifier
  19                 | CLASS permissive_ident optional_inherits compound_block END CLASS
  20                 | CONST permissive_ident EQUALS rvalue
  21                 | DIM identifier_comma_list
  22                 | DO do_condition compound_block LOOP
  23                 | DO compound_block LOOP do_condition
  24                 | ERASE identifier
  25                 | EXECUTE rvalue
  26                 | EXIT exit_keyword
  27                 | FOR for_declaration compound_block NEXT
  28                 | FUNCTION subroutine_definition END FUNCTION
  29                 | IF rvalue THEN if_then
  30                 | ON ERROR on_error_statement
  31                 | OPTION EXPLICIT
  32                 | member_access_level member_default member_statement
  33                 | RANDOMIZE L_PAREN R_PAREN
  34                 | RANDOMIZE
  35                 | REDIM PRESERVE identifier_comma_list
  36                 | REDIM identifier_comma_list
  37                 | select_statement
  38                 | SET identifier EQUALS rvalue
  39                 | SUB subroutine_definition END SUB
  40                 | WHILE rvalue compound_block WEND
  41                 | WITH identifier separator compound_block END WITH
  42                 | identifier EQUALS rvalue
  43                 | identifier
  44                 | identifier rvalue_list
  45                 | FUNCTION subroutine_definition END SUB
  46                 | SUB subroutine_definition END FUNCTION

  47  optional_inherits : INHERITS permissive_ident
  48                    |

  49  member_default : DEFAULT
  50                 |

  51  member_statement : identifier_comma_list
  52                   | FUNCTION subroutine_definition END FUNCTION
  53                   | SUB subroutine_definition END SUB
  54                   | PROPERTY property_action subroutine_definition END PROPERTY

  55  member_access_level : PRIVATE
  56                      | PUBLIC

  57  property_action : GET
  58                  | SET
  59                  | LET

  60  do_condition : WHILE rvalue
  61               | UNTIL rvalue

  62  exit_keyword : FOR
  63               | DO
  64               | FUNCTION
  65               | SUB
  66               | PROPERTY
  67               | WHILE

  68  for_declaration : permissive_ident EQUALS rvalue TO rvalue optional_step
  69                  | EACH permissive_ident IN rvalue

  70  optional_step : STEP rvalue
  71                |

  72  if_then : statement
  73          | statement if_else
  74          | compound_block if_else

  75  if_else : ELSEIF rvalue THEN if_then
  76          | ELSE statement
  77          | ELSE statement END IF
  78          | ELSE compound_block END IF
  79          | END IF

  80  subroutine_definition : permissive_ident maybe_formal_param_list compound_block

  81  maybe_formal_param_list : L_PAREN formal_param_list R_PAREN
  82                          | L_PAREN R_PAREN
  83                          |

  84  formal_param_list : formal_param
  85                    | formal_param COMMA formal_param_list

  86  formal_param : BYVAL formal_param_ident
  87               | BYREF formal_param_ident
  88               | formal_param_ident

  89  formal_param_ident : permissive_ident
  90                     | EXECUTE

  91  on_error_statement : RESUME NEXT
  92                     | GOTO INT
  93                     | GOTO identifier

  94  select_statement : SELECT CASE rvalue at_least_one_separator select_statement_list END SELECT

  95  select_statement_list : CASE select_rvalue compound_block select_statement_list
  96                        |

  97  select_rvalue : ELSE
  98                | rvalue_list

  99  rvalue : L_PAREN rvalue R_PAREN
 100         | identifier
 101         | EVAL L_PAREN rvalue R_PAREN
 102         | NEW identifier
 103         | MINUS rvalue
 104         | rvalue PLUS rvalue
 105         | rvalue MINUS rvalue
 106         | rvalue MULT rvalue
 107         | rvalue DIV rvalue
 108         | rvalue MOD rvalue
 109         | rvalue INTDIV rvalue
 110         | rvalue EXP rvalue
 111         | rvalue AND rvalue
 112         | rvalue OR rvalue
 113         | rvalue XOR rvalue
 114         | rvalue IMP rvalue
 115         | rvalue EQV rvalue
 116         | NOT rvalue
 117         | rvalue EQUALS rvalue
 118         | rvalue NOT_EQUALS rvalue
 119         | rvalue LESS rvalue
 120         | rvalue GREATER rvalue
 121         | rvalue LESS_EQUAL rvalue
 122         | rvalue GREATER_EQUAL rvalue
 123         | rvalue IS rvalue
 124         | rvalue CONCAT rvalue
 125         | literal

 126  literal : HEX
 127          | OCT
 128          | INT
 129          | FLOAT
 130          | STRING
 131          | TRUE
 132          | FALSE
 133          | NULL
 134          | NOTHING

 135  rvalue_list : rvalue
 136              | rvalue COMMA rvalue_list
 137              | COMMA rvalue_list
 138              |

 139  identifier : permissive_ident
 140             | identifier DOT permissive_ident
 141             | identifier DOT END
 142             | identifier DOT EXECUTE
 143             | identifier L_PAREN rvalue_list R_PAREN

 144  identifier_comma_list : identifier
 145                        | identifier COMMA identifier_comma_list

 146  permissive_ident : IDENT
 147                   | PROPERTY
 148                   | ERROR

 149  %entry% : '\001' statement_list
 150          | '\002' rvalue
 151          | '\003' page

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	'\003'  shift 3
	.  error

	%entry%  goto 4


state 1
	%entry% : '\001' . statement_list  (149)
	statement_list : .  (4)

	HTML  shift 5
	SSI  shift 6
	INLINE_VALUE  shift 7
	CALL  shift 8
	CLASS  shift 9
	CONST  shift 10
	DIM  shift 11
	DO  shift 12
	ERASE  shift 13
	ERROR  shift 14
	EXECUTE  shift 15
	EXIT  shift 16
	FOR  shift 17
	FUNCTION  shift 18
	IF  shift 19
	ON  shift 20
	OPTION  shift 21
	PRIVATE  shift 22
	PROPERTY  shift 23
	PUBLIC  shift 24
	RANDOMIZE  shift 25
	REDIM  shift 26
	SELECT  shift 27
	SET  shift 28
	SUB  shift 29
	WHILE  shift 30
	WITH  shift 31
	COMMENT  shift 32
	IDENT  shift 33
	COLON  shift 34
	EOF  shift 35
	EOL  shift 36
	$end  reduce 4

	statement_list  goto 37
	terminated_statement  goto 38
	separator  goto 39
	statement  goto 40
	statement_body  goto 41
	identifier  goto 42
	permissive_ident  goto 43
	member_access_level  goto 44
	select_statement  goto 45


state 2
	%entry% : '\002' . rvalue  (150)

	ERROR  shift 14
	EVAL  shift 46
	PROPERTY  shift 23
	IDENT  shift 33
	L_PAREN  shift 47
	NOT  shift 48
	MINUS  shift 49
	NEW  shift 50
	INT  shift 51
	HEX  shift 52
	OCT  shift 53
	FLOAT  shift 54
	STRING  shift 55
	TRUE  shift 56
	FALSE  shift 57
	NULL  shift 58
	NOTHING  shift 59
	.  error

	rvalue  goto 60
	identifier  goto 61
	permissive_ident  goto 43
	literal  goto 62


state 3
	%entry% : '\003' . page  (151)
	statement_list : .  (4)

	HTML  shift 5
	SSI  shift 6
	INLINE_VALUE  shift 7
	CALL  shift 8
	CLASS  shift 9
	CONST  shift 10
	DIM  shift 11
	DO  shift 12
	ERASE  shift 13
	ERROR  shift 14
	EXECUTE  shift 15
	EXIT  shift 16
	FOR  shift 17
	FUNCTION  shift 18
	IF  shift 19
	ON  shift 20
	OPTION  shift 21
	PRIVATE  shift 22
	PROPERTY  shift 23
	PUBLIC  shift 24
	RANDOMIZE  shift 25
	REDIM  shift 26
	SELECT  shift 27
	SET  shift 28
	SUB  shift 29
	WHILE  shift 30
	WITH  shift 31
	COMMENT  shift 32
	IDENT  shift 33
	COLON  shift 34
	EOF  shift 35
	EOL  shift 36
	$end  reduce 4

	statement_list  goto 63
	page  goto 64
	terminated_statement  goto 38
	separator  goto 39
	statement  goto 40
	statement_body  goto 41
	identifier  goto 42
	permissive_ident  goto 43
	member_access_level  goto 44
	select_statement  goto 45


state 4
	$accept : %entry% . $end  (0)

	$end  accept


state 5
	separator : HTML .  (12)

	.  reduce 12


state 6
	separator : SSI .  (13)

	.  reduce 13


state 7
	separator : INLINE_VALUE . rvalue  (11)

	ERROR  shift 14
	EVAL  shift 46
	PROPERTY  shift 23
	IDENT  shift 33
	L_PAREN  shift 47
	NOT  shift 48
	MINUS  shift 49
	NEW  shift 50
	INT  shift 51
	HEX  shift 52
	OCT  shift 53
	FLOAT  shift 54
	STRING  shift 55
	TRUE  shift 56
	FALSE  shift 57
	NULL  shift 58
	NOTHING  shift 59
	.  error

	rvalue  goto 65
	identifier  goto 61
	permissive_ident  goto 43
	literal  goto 62


state 8
	statement_body : CALL . identifier  (18)

	ERROR  shift 14
	PROPERTY  shift 23
	IDENT  shift 33
	.  error

	identifier  goto 66
	permissive_ident  goto 43


state 9
	statement_body : CLASS . permissive_ident optional_inherits compound_block END CLASS  (19)

	ERROR  shift 14
	PROPERTY  shift 23
	IDENT  shift 33
	.  error

	permissive_ident  goto 67


state 10
	statement_body : CONST . permissive_ident EQUALS rvalue  (20)

	ERROR  shift 14
	PROPERTY  shift 23
	IDENT  shift 33
	.  error

	permissive_ident  goto 68


state 11
	statement_body : DIM . identifier_comma_list  (21)

	ERROR  shift 14
	PROPERTY  shift 23
	IDENT  shift 33
	.  error

	identifier  goto 69
	permissive_ident  goto 43
	identifier_comma_list  goto 70


state 12
	statement_body : DO . do_condition compound_block LOOP  (22)
	statement_body : DO . compound_block LOOP do_condition  (23)

	HTML  shift 5
	SSI  shift 6
	INLINE_VALUE  shift 7
	UNTIL  shift 71
	WHILE  shift 72
	COMMENT  shift 32
	COLON  shift 34
	EOL  shift 36
	.  error

	compound_block  goto 73
	separator  goto 74
	do_condition  goto 75


state 13
	statement_body : ERASE . identifier  (24)

	ERROR  shift 14
	PROPERTY  shift 23
	IDENT  shift 33
	.  error

	identifier  goto 76
	permissive_ident  goto 43


state 14
	permissive_ident : ERROR .  (148)

	.  reduce 148


state 15
	statement_body : EXECUTE . rvalue  (25)

	ERROR  shift 14
	EVAL  shift 46
	PROPERTY  shift 23
	IDENT  shift 33
	L_PAREN  shift 47
	NOT  shift 48
	MINUS  shift 49
	NEW  shift 50
	INT  shift 51
	HEX  shift 52
	OCT  shift 53
	FLOAT  shift 54
	STRING  shift 55
	TRUE  shift 56
	FALSE  shift 57
	NULL  shift 58
	NOTHING  shift 59
	.  error

	rvalue  goto 77
	identifier  goto 61
	permissive_ident  goto 43
	literal  goto 62


state 16
	statement_body : EXIT . exit_keyword  (26)

	DO  shift 78
	FOR  shift 79
	FUNCTION  shift 80
	PROPERTY  shift 81
	SUB  shift 82
	WHILE  shift 83
	.  error

	exit_keyword  goto 84


state 17
	statement_body : FOR . for_declaration compound_block NEXT  (27)

	EACH  shift 85
	ERROR  shift 14
	PROPERTY  shift 23
	IDENT  shift 33
	.  error

	permissive_ident  goto 86
	for_declaration  goto 87


state 18
	statement_body : FUNCTION . subroutine_definition END FUNCTION  (28)
	statement_body : FUNCTION . subroutine_definition END SUB  (45)

	ERROR  shift 14
	PROPERTY  shift 23
	IDENT  shift 33
	.  error

	permissive_ident  goto 88
	subroutine_definition  goto 89


state 19
	statement_body : IF . rvalue THEN if_then  (29)

	ERROR  shift 14
	EVAL  shift 46
	PROPERTY  shift 23
	IDENT  shift 33
	L_PAREN  shift 47
	NOT  shift 48
	MINUS  shift 49
	NEW  shift 50
	INT  shift 51
	HEX  shift 52
	OCT  shift 53
	FLOAT  shift 54
	STRING  shift 55
	TRUE  shift 56
	FALSE  shift 57
	NULL  shift 58
	NOTHING  shift 59
	.  error

	rvalue  goto 90
	identifier  goto 61
	permissive_ident  goto 43
	literal  goto 62


state 20
	statement_body : ON . ERROR on_error_statement  (30)

	ERROR  shift 91
	.  error


state 21
	statement_body : OPTION . EXPLICIT  (31)

	EXPLICIT  shift 92
	.  error


state 22
	member_access_level : PRIVATE .  (55)

	.  reduce 55


state 23
	permissive_ident : PROPERTY .  (147)

	.  reduce 147


state 24
	member_access_level : PUBLIC .  (56)

	.  reduce 56


state 25
	statement_body : RANDOMIZE . L_PAREN R_PAREN  (33)
	statement_body : RANDOMIZE .  (34)

	L_PAREN  shift 93
	HTML  reduce 34
	SSI  reduce 34
	INLINE_VALUE  reduce 34
	END  reduce 34
	ELSE  reduce 34
	ELSEIF  reduce 34
	COMMENT  reduce 34
	COLON  reduce 34
	EOF  reduce 34
	EOL  reduce 34


state 26
	statement_body : REDIM . PRESERVE identifier_comma_list  (35)
	statement_body : REDIM . identifier_comma_list  (36)

	ERROR  shift 14
	PRESERVE  shift 94
	PROPERTY  shift 23
	IDENT  shift 33
	.  error

	identifier  goto 69
	permissive_ident  goto 43
	identifier_comma_list  goto 95


state 27
	select_statement : SELECT . CASE rvalue at_least_one_separator select_statement_list END SELECT  (94)

	CASE  shift 96
	.  error


state 28
	statement_body : SET . identifier EQUALS rvalue  (38)

	ERROR  shift 14
	PROPERTY  shift 23
	IDENT  shift 33
	.  error

	identifier  goto 97
	permissive_ident  goto 43


state 29
	statement_body : SUB . subroutine_definition END SUB  (39)
	statement_body : SUB . subroutine_definition END FUNCTION  (46)

	ERROR  shift 14
	PROPERTY  shift 23
	IDENT  shift 33
	.  error

	permissive_ident  goto 88
	subroutine_definition  goto 98


state 30
	statement_body : WHILE . rvalue compound_block WEND  (40)

	ERROR  shift 14
	EVAL  shift 46
	PROPERTY  shift 23
	IDENT  shift 33
	L_PAREN  shift 47
	NOT  shift 48
	MINUS  shift 49
	NEW  shift 50
	INT  shift 51
	HEX  shift 52
	OCT  shift 53
	FLOAT  shift 54
	STRING  shift 55
	TRUE  shift 56
	FALSE  shift 57
	NULL  shift 58
	NOTHING  shift 59
	.  error

	rvalue  goto 99
	identifier  goto 61
	permissive_ident  goto 43
	literal  goto 62


state 31
	statement_body : WITH . identifier separator compound_block END WITH  (41)

	ERROR  shift 14
	PROPERTY  shift 23
	IDENT  shift 33
	.  error

	identifier  goto 100
	permissive_ident  goto 43


state 32
	separator : COMMENT .  (14)

	.  reduce 14


state 33
	permissive_ident : IDENT .  (146)

	.  reduce 146


state 34
	separator : COLON .  (16)

	.  reduce 16


state 35
	statement_list : EOF .  (3)

	.  reduce 3


state 36
	separator : EOL .  (15)

	.  reduce 15


state 37
	%entry% : '\001' statement_list .  (149)

	.  reduce 149


state 38
	statement_list : terminated_statement . statement_list  (2)
	statement_list : .  (4)
